--- a/package.json
+++ b/package.json
@@ -10,20 +10,37 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "build": "rm -rf dist && webpack"
+    "build": "rm -rf dist && webpack && ./bin/zipify.sh",
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "lint": "eslint .",
+    "prettier": "prettier -c extension/**/*",
+    "prettier:fix": "prettier --write extension/**/*"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/chrome": "^0.0.213",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.1"
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.9.5",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "zip-build": "^1.8.0"
   }
 }
