--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,21 +5,7 @@ on:
   pull_request:
 
 jobs:
-  docs:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [ 16.x ]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i --prefix docs
-      - name: Install prerequisites and test
-        run: npm run build --prefix docs
-  package:
+  extension:
     runs-on: ubuntu-latest
     strategy:
       matrix:
