--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,24 +17,15 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          registry-url: 'https://registry.npmjs.org'
           node-version: ${{ matrix.node-version }}
-      - name: Cache Node.js modules
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Install dependencies
         run: npm ci
       - name: Lint
         run: npm run lint
-      - name: Lint
+      - name: Test with coverage
+        run: npm run coverage
+      - name: Build
         run: npm run build
-      - name: Install prerequisites and test
-        env:
-          CHROME_BIN: "/usr/bin/chromium-browser"
-        run: sudo apt-get update -yq && sudo apt-get install xvfb -yq && xvfb-run --auto-servernum npm test
       - name: Conventional Changelog Action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3.18.0
